brigde 模式
